--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 <!--index main content-->
 {% block content %}
 <section id="showcase-inner" class="py-5 text-white">
@@ -21,7 +22,7 @@
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
             <li class="breadcrumb-item">
-              <a href="index.html"> <i class="fas fa-home"></i> Home</a>
+              <a href={% url 'pages:index' %} <i class="fas fa-home"></i> Home</a>
             </li>
             <li class="breadcrumb-item active">About</li>
           </ol>
@@ -41,7 +42,7 @@
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt,
               pariatur!
             </p>
-            <img src="assets/img/about.jpg" alt="" />
+            <img src={% static "img/about.jpg" %} alt="" />
             <p class="mt-4">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Perspiciatis esse officia repudiandae ad saepe ex, amet neque quod
@@ -54,7 +55,7 @@
             <div class="card">
               <img
                 class="card-img-top"
-                src="assets/img/doctors/kyle.jpg"
+                src={% static "img/doctors/kyle.jpg" %}
                 alt="Seller of the month"
               />
               <div class="card-body">
@@ -79,6 +80,7 @@
         aperiam, unde aliquid at similique!
       </h4>
       <hr />
+      {% comment %} listings {% endcomment %}
       <a href="listings.html" class="btn btn-secondary text-white btn-lg"
         >View Our Featured Listings</a
       >
@@ -91,7 +93,7 @@
         <div class="row text-center">
           <div class="col-md-4">
             <img
-              src="assets/img/doctors/kyle.jpg"
+              src={% static "img/doctors/kyle.jpg" %}
               alt=""
               class="rounded-circle mb-3 img-fluid"
               style="object-fit: cover; width: 300px; height: 300px"
@@ -107,7 +109,8 @@
 
           <div class="col-md-4">
             <img
-              src="assets/img/doctors/emma.jpg"
+            {% comment %}  {% endcomment %}
+              src={% static "img/doctors/emma.jpg" %}
               alt=""
               class="rounded-circle mb-3 img-fluid"
               style="object-fit: cover; width: 300px; height: 300px"
@@ -121,7 +124,7 @@
 
           <div class="col-md-4">
             <img
-              src="assets/img/doctors/jenny.jpg"
+              src={% static "img/doctors/jenny.jpg" %}
               alt=""
               class="rounded-circle mb-3 img-fluid"
               style="object-fit: cover; width: 300px; height: 300px"
