--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 <!--index main content-->
 
     {% block content %}
@@ -14,6 +15,7 @@
               tempore! Consectetur, id commodi!
             </p>
             <div class="search">
+            <!-- search -->
               <form action="search.html">
                 <!-- Form Row 1 -->
                 <div class="form-row">
@@ -104,7 +106,7 @@
             <div class="card listing-preview">
               <img
                 class="card-img-top"
-                src="assets/img/clinics/clinic-1.jpg"
+                src={% static "img/clinics/clinic-1.jpg" %}
                 alt=""
               />
               <div class="card-img-overlay">
@@ -134,6 +136,7 @@
                   </div>
                 </div>
                 <hr />
+                
                 <div class="row py-2 text-secondary">
                   <div class="col-12"><i class="fas fa-user"></i> Ms. Ma</div>
                 </div>
@@ -155,7 +158,7 @@
             <div class="card listing-preview">
               <img
                 class="card-img-top"
-                src="assets/img/clinics/clinic-2.jpg"
+                src={% static "img/clinics/clinic-2.jpg" %}
                 alt=""
               />
               <div class="card-img-overlay">
@@ -209,7 +212,7 @@
             <div class="card listing-preview">
               <img
                 class="card-img-top"
-                src="assets/img/clinics/clinic-3.jpg"
+                src={% static "img/clinics/clinic-3.jpg" %}
                 alt=""
               />
               <div class="card-img-overlay">
