--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -24,9 +24,11 @@
             class="nav-item mr-3" {% endif %}>
               <a class="nav-link" href={% url 'pages:about' %} >About</a>
             </li>
+            {% comment %} fix active css {% endcomment %}
             <li class="nav-item mr-3">
-              {% comment %} fix it later {% endcomment %}
-              <a class="nav-link" href="listings.html">Inpatient medical services</a>
+              <a class="nav-link" href={% url 'listings:index'%}>
+              Inpatient medical services
+              </a>
             </li>
           </ul>
 
